# automatons_for_formal_languages

./: CMakeLists.txt  README.md  clear.sh  run.sh
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp
include/: DKA.h  NKA.h
src/0-NKA/: CMakeLists.txt  NKA.cpp
src/1-DKA/: CMakeLists.txt  DKA.cpp
tests/: CMakeLists.txt
tests/0-NKA/: CMakeLists.txt  TestNKA.cpp  TestNKA.h
tests/1-DKA/: CMakeLists.txt  TestDKA.cpp  TestDKA.h
