add_executable(example-1-bin example_1.cpp)
target_link_libraries(example-1-bin 0-NKA)
target_link_libraries(example-1-bin 1-DKA)

add_executable(example-2-bin example_2.cpp)
target_link_libraries(example-2-bin 0-NKA)
target_link_libraries(example-2-bin 1-DKA)

add_executable(example-3-bin example_3.cpp)
target_link_libraries(example-3-bin 0-NKA)
target_link_libraries(example-3-bin 1-DKA)
